fix(Slider): fit thumbs within the bar area not to cause overflow

--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -57,6 +57,12 @@
 	font-variant-numeric: tabular-nums;
 }
 
+.thumbs {
+	position: absolute;
+	inset-inline: var(--rs-unit-x2);
+	height: 100%;
+}
+
 .thumb {
 	width: 0;
 	height: 100%;
